# InvestAgent

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: quality_gate.yml
app/: .gitkeep  streamlit_app.py
linters/: .gitkeep  check_agent_structure.py
runtime/reports/: .gitkeep
spec/: akshare-data-design.md  invest_spec.md  project-architecture.md
src/: __init__.py  agent.py  schemas.py  state.py  tools.py
src/evaluation/: __init__.py  langfuse_tracing.py  openevals_eval.py
src/stages/: __init__.py  decision.py  modeling.py  perception.py  reasoning.py  reporter.py  validator.py
tests/: conftest.py  test_agent.py  test_integration.py  test_reporter.py  test_stages.py  test_tools.py
