[project]
name = "investagent"
version = "0.1.0"
description = "混合型智能投研助手 — LangGraph Hybrid Agent showcase (Reactive + Deliberative)"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: 需要真实 API Key 的集成测试",
]
addopts = "-m 'not integration' -v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
